# GuardPost

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  guardpost.code-workspace  neoteroi-auth.code-workspace  project.code-workspace  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build.yml
examples/: README.md  example-01.py  example-02.py  example-03.py  example-04.py  example-05.py  example-06.py  example-07.py  example-08.py  example-09.py  example-10.py
guardpost/: __init__.py  abc.py  authentication.py  authorization.py  common.py  errors.py  funchelper.py  protection.py  utils.py
guardpost/asynchronous/: authentication.py  authorization.py
guardpost/jwks/: __init__.py  caching.py  openid.py  urls.py
guardpost/jwts/: __init__.py
guardpost/synchronous/: authentication.py  authorization.py
neoteroi/auth/: __init__.py  abc.py  authentication.py  authorization.py  common.py  funchelper.py
neoteroi/auth/asynchronous/: authentication.py  authorization.py
neoteroi/auth/jwks/: __init__.py  openid.py  urls.py
neoteroi/auth/synchronous/: authentication.py  authorization.py
tests/: examples.py  serverfixtures.py  test_authentication.py  test_authorization.py  test_common.py  test_common_scenarios.py  test_examples.py  test_funchelper.py  test_jwks.py  test_jwts.py  test_jwts_ec.py  test_jwts_sym.py  test_protection.py  test_sync_authentication.py  test_sync_authorization.py
tests/res/: 1.pem  2.pem  3.pem  4.pem  ec256.pem  ec384.pem  ec521.pem  ec_jwks.json  genjwks.py  jwks.json  openid-configuration.json  x.pem
