[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardpost"
dynamic = ["version"]
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
description = "Framework to handle authentication and authorization."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
keywords = ["authentication", "authorization", "identity", "claims", "strategy"]
dependencies = ["rodi>=2.0.0", "typing_extensions; python_version < '3.8'"]

[project.optional-dependencies]
jwt = ["PyJWT", "cryptography"]

[tool.hatch.build.targets.sdist]
include = [
  "guardpost/",
  "README.md",
  "LICENSE*",
  "CHANGELOG*",
  "pyproject.toml",
]

[tool.hatch.version]
path = "guardpost/__about__.py"

[project.urls]
"Homepage" = "https://github.com/Neoteroi/GuardPost"
"Bug Tracker" = "https://github.com/Neoteroi/GuardPost/issues"
